Homework3/pragarwal/Templates/es6-webpack-template/node/src/css/styles.css
h1 {
    color: black;
    font-family: "Proxima Nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

body {
    margin-left: 50px;
}


#myClass1 {
    color: white;
    float: left;
}

#myClass2 {
    color: white;
    /* float: left; */
    text-align: center;
}

#myClass3 {
    color: white;
    /* float: left; */
    /* text-align: justify; */
}

#myClassopt {
    color:rgb(75, 75, 75);
    /* text-align: center; */
    float: left;

    font-size: x-small;
    position: relative;
        top: 10px;
}

#myClass5 {
    color: white;
    /* float: center; */
    text-align: center;
}

body{
    /* background-color : rgb(109, 108, 108); */
    /* background-color : #1ed760; */
    background-color: black;
}

.header {
    /* font-weight : bold; */
    font-size: xx-large;
    font-family: "Proxima Nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
    height: 150px;
    width: 100%;
    color: white;
    text-align: center;
    float: left;

    /* padding-left: 50px; */
    /* background-color: black; */
}

.bubbles {
    stroke-width: 1px;
    stroke: #c4fa70;
  }

.bubbles:hover {
    stroke: #fb84ce;
    color: #fb84ce;
    stroke-width: 3px;
  }

.axis path,
.axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}

.x.axis path {
  display: none;
}

.line {
  fill: none;
  stroke: #03dac5;
  stroke-width: 2.0px;
  opacity: 1.0;
}

#linechart {
    fill: white;
    color: white;
    /* stroke: white; */
    text-decoration: white;
    fill: white;
    background-color: rgb(37, 34, 34);
    stroke-width: 1.0px;
    opacity: 1.0;
    float: left;
    /* width: 50%; */
    /* height: 300px; */
}

.axisWhite line{
    stroke: white;
}

.container2 {
    width: 40%;
    height: 300px;
    float: left;
    /* position: relative; */
    margin: 20px;
    margin-bottom: 50px;
}

#selectButton {
    float: left;
    margin-bottom: 5px;
    color:white;
    background-color: #e8249a;
    stroke: black;
    stroke-width: 3.5px;
    text-shadow: 0.5px 0.5px #03dac5;
}

.container1 {
    width: 40%;
    height: 300px;
    float: left;
    /* position: relative; */
    margin-bottom: 60px;
    margin-left: 20px;
    margin-top: 50px;
}

#mydataviz {
    fill: white;
    /* stroke: white; */
    text-decoration: white;
    fill: white;
    background-color: rgb(37, 34, 34);
    stroke-width: 1.0px;
    opacity: 1.0;
    float: left;
    color: white;
}

.container3 {
    width: 50%;
    height: 300px;
    float: right;
    /* position: relative; */
    margin-bottom: 60px;
    /* margin-left: 10px; */
    margin-top: 20px;
    margin-left: 10px;
}

#stackedbarchart {
    fill: white;
    stroke: white;
    text-decoration: white;
    fill: white;
    background-color: rgb(37, 34, 34);
    stroke-width: 1.0px;
    opacity: 1.0;
    float: right;
}

#streamgraph {
    fill: white;
    /* stroke: white; */
    text-decoration: white;
    fill: white;
    background-color: rgb(37, 34, 34);
    stroke-width: 1.0px;
    opacity: 1.0;
    float: left;
    color: white;
    /* width: 700px; 
    height: 500px;  */
}

.container4 {
    width: 50%;
    height: 300px;
    float: right;
    /* position: relative; */
    margin-bottom: 60px;
    /* margin-right: 40px; */
    margin-top: 20px;
    margin-left: 10px;
}

#tooltip {
    margin-bottom: 20px;
}

.legend {
    height: 20px;
    width: 30px;
    margin-bottom: 10px;
}

#stackedbarcharttopartist {
    fill: white;
    /* stroke: white; */
    text-decoration: white;
    fill: white;
    background-color: rgb(37, 34, 34);
    stroke-width: 1.0px;
    opacity: 1.0;
    float: left;
    color: white;
}

.container5 {
    color: white;
    width: 40%;
    height: 300px;
    float: left;
    /* position: relative; */
    margin-bottom: 60px;
    /* margin-right: 40px; */
    margin-top: 10px;
    margin-left: 20px;
}

#clevelandplot {
    fill: white;
    /* stroke: white; */
    text-decoration: white;
    fill: white;
    background-color: rgb(37, 34, 34);
    stroke-width: 1.0px;
    opacity: 1.0;
    float: left;
    color: white;
}

.zoom {
    cursor: move;
    fill: none;
    pointer-events: all;
  }


  .header-img {
    width: 100%;
    height: 150px;
    /* background: url('/Users/pratibhaagarwal/Documents/projects/ecs272/ECS272-Winter2021/Homework3/pragarwal/Templates/es6-webpack-template/node/src/assets/images/SpotifyDash.png'); */
    /* background-size: cover; */
  }

